# loki-builder

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tauri.conf.json  todo.md  vite.config.ts
.fttemplates/rust-action/: .ftsettings.json  [FTName % snakecase].rs
.fttemplates/rust-event/: .ftsettings.json  [FTName % snakecase].rs
.fttemplates/solid-component/: .ftsettings.json  [FTName % pascalcase].tsx  [FTName | pascalcase].tsx
backend/: .env  Cargo.toml  package.yaml  tauri.conf.json
backend/.cargo/: config.toml
backend/capabilities/: default.json
backend/src/: errors.rs  lib.rs  main.rs
backend/src/api/: greet.rs  mod.rs
backend/src/api/definitions/: get_definitions.rs  mod.rs
backend/src/ipc/: get_definitions.rs  greet.rs  mod.rs  models.rs
backend/src/ipc/actions/: get_definitions.rs  greet.rs  mod.rs
backend/src/ipc/events/: hello.rs  notify.rs
backend/src/models/: definition.rs  feature.rs  maybe_vec.rs  mod.rs  options.rs  reference.rs
content/: ability_score.yml  index.yml
content/ability_score/: point_buy.yml  random.yml  std_array.yml
content/backgrounds/: background.yml  example.yml
frontend/: .gitignore  .stylelintrc.js  eslint.config.js  package.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.scss  index.tsx  ipc.ts
frontend/src/App/: AppProvider.tsx  AppRouter.tsx  index.tsx
frontend/src/app/: index.tsx
frontend/src/core/: type.ts  types.ts
frontend/src/debug/: palette.tsx
frontend/src/ipc/: actions.ts  (+3 more)
saves/: my_character.loki
(+53 files in other folders)
