[package]
name = "loki-builder"
version = "0.1.0"
description = "A D&D 5.24e Character Builder"
authors = ["David Baierl"]
license = "MIT"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# @TODO: find out why the app was splittet in main and lib
# [lib]
# # The `_lib` suffix may seem redundant but it is necessary
# # to make the lib name unique and wouldn't conflict with the bin name.
# # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# name = "loki_builder_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }

# tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10.1.0"
